# Seminal-Input-Feature-Detection-Tool

./: .gitignore  InputFeature.sh  LICENSE  README.md  branch_tracer.sh  callgrind_output.txt  inputFeatureDetector.sh  start.sh  trace_branches.sh
Part1/: BranchTracer.cpp  BranchTracer.h  CMakeLists.txt
Part2/: CMakeLists.txt  InputFeatureDetector.cpp  InputFeatureDetector.h
output/: automaton.c_BPT.txt  automaton.c_BranchDictionary.txt  binrep.c_BranchDictionary.txt  branch.c_BranchDictionary.txt  driver.c_BranchDictionary.txt  example.c_BPT.txt  mandel.c_BranchDictionary.txt  wordle.c_BranchDictionary.txt
tests/: Makefile  driver.c  example.c  open.c
